Update 5: Add /storagePlacesAtLocation
