# router/v3_api_storage.go
@@ -1,7 +1,11 @@
 package router
 
 import (
+	"log"
+	"net/http"
+
 	"github.com/gin-gonic/gin"
+	"github.com/hashworks/relaxdays-hackathon-cc-vol1-7-backend-storage/models"
 )
 
 // API endpoint that returns a specific storage by name
@@ -84,4 +88,34 @@ func (s Server) V3StorageGetCursor(c *gin.Context) {
 func (s Server) V3StorageGetPlacesForArticleID(c *gin.Context) {
 	// Currently this function is redundant, it is only used for swagger annotations.
 	s.V2StorageGetPlacesForArticleID(c)
+}
+
+// API endpoint returns n storages after a specific one
+//
+// @Summary Returns "n" storages lexicographically after storage "x" at place "l"
+// @Success 200 {array} models.V2Storage
+// @Param n query int true "Number of storages after the named one"
+// @Param l query string true "Place to query"
+// @Param x query string false "Storage name where we should start the cursor"
+// @Router /v3/storagePlacesAtLocation [get]
+// @Tags V3Storage
+// @Security BasicAuth
+func (s Server) V3StorageGetPlacesAtLocationCursor(c *gin.Context) {
+	code, v0Storages := s.v3GetStoragesByCursorAndPlace(c.Query("l"), c.Query("x"), c.Query("n"))
+
+	if code == http.StatusOK {
+		v2Storages := make([]models.V2Storage, 0)
+		for _, v0Storage := range v0Storages {
+			valid, v1Storage := v0Storage.ToV1Storage()
+			if !valid {
+				log.Print("Failed to convert v0Storage to v1Storage")
+				c.Status(http.StatusInternalServerError)
+				return
+			}
+			v2Storages = append(v2Storages, v1Storage.ToV2Storage())
+		}
+		c.JSON(code, v2Storages)
+	} else {
+		c.Status(code)
+	}
 }
